| Bug #57886 | Race condition with drop table vs. create-event | ||
|---|---|---|---|
| Submitted: | 1 Nov 2010 9:48 | Modified: | 1 Nov 2010 15:21 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: NDB API | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[1 Nov 2010 9:48]
Jonas Oreland
[1 Nov 2010 9:49]
Jonas Oreland
Changed category to ndbapi.
[1 Nov 2010 9:56]
Jonas Oreland
Another possibility was that NdbEventOperation::execute() would hang
[1 Nov 2010 10:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/122406 3328 jonas oreland 2010-11-01 ndb - bug#57886 - Fix a series of race-conditions with drop table vs. create/subscribe event
[1 Nov 2010 10:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/122409 3906 jonas oreland 2010-11-01 ndb - bug#57886 (7.0 only) - Fix problem with drop table vs. GET_TABINFOREQ (for suma) in DICT
[1 Nov 2010 10:14]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:jonas@mysql.com-20101101101405-o3vohh58f406g2by) (version source revid:jonas@mysql.com-20101101101405-o3vohh58f406g2by) (merge vers: 5.1.51-ndb-7.0.20) (pib:21)
[1 Nov 2010 10:15]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:jonas@mysql.com-20101101100612-l8us12zfbl469t2m) (version source revid:jonas@mysql.com-20101101100612-l8us12zfbl469t2m) (merge vers: 5.1.51-ndb-6.3.39) (pib:21)
[1 Nov 2010 12:15]
Jonas Oreland
pushed to 6.3.39, 7.0.20 and 7.1.9
[1 Nov 2010 15:21]
Jon Stephens
Documented fix in the NDB-6.3.39, 7.0.20. and 7.1.9 changelogs, as follows:
An application dropping a table at the same time that another
application tried to set up a replication event on the same
table could lead to a crash of the data node. The same issue
could sometimes cause NdbEventOperation::execute() to hang.
Closed.
