ndb - bug#57886 - Fix a series of race-conditions with drop table vs. create/subscribe event